상단 메뉴 추가

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dream jeju</title>
+    <!-- 폰트어썸 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -15,10 +17,20 @@
             <div class="top_menu">
                 <ul class="menu">
                     <li>
-                        <a href="#">단체 여행</a>
+                        <a href="#">단체 여행 <i class="fa-solid fa-caret-down"></i></a>
+                        <ul class="submenu">
+                            <li><a href="#">단체 여행1</a></li>
+                            <li><a href="#">단체 여행2</a></li>
+                            <li><a href="#">단체 여행3</a></li>
+                        </ul>
                     </li>
                     <li>
-                        <a href="#">맞춤 여행</a>
+                        <a href="#">맞춤 여행 <i class="fa-solid fa-caret-down"></i></a>
+                        <ul class="submenu">
+                            <li><a href="#">맞춤 여행1</a></li>
+                            <li><a href="#">맞춤 여행2</a></li>
+                            <li><a href="#">맞춤 여행3</a></li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#">갤러리</a>
@@ -38,8 +50,8 @@
             <!-- 공지사항 및 갤리러 -->
             <div class="main_bottom">
                 <div class="notice">
-                    <p>공지사항</p>
-                    <p>갤러리</p>
+                    <p class="notice_text">공지사항</p>
+                    <p class="gallery_text">갤러리</p>
                     <ul class="notice_list">
                         <li>
                             <a href="#">
@@ -72,19 +84,25 @@
                     <ul>
                         <li>
                             <a href="#">
-                                <img src="images/icon-1.jpg" alt="평화기행">
-                                <p>형화 기행</p>
+                                <div class="img">
+                                    <img src="images/icon-1.jpg" alt="평화기행">
+                                </div>
+                                <p>평화 기행</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/icon-2.jpg" alt="힐링 워크샵">
+                                <div class="img">
+                                    <img src="images/icon-2.jpg" alt="힐링 워크샵">
+                                </div>
                                 <p>힐링 워크샵</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="images/icon-3.jpg" alt="문의하기">
+                                <div class="img">
+                                    <img src="images/icon-3.jpg" alt="문의하기">
+                                </div>
                                 <p>문의하기</p>
                             </a>
                         </li>
